@@ -4,7 +4,8 @@ Changelog
 2.1.9 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- add @@download view for IFileContent
+  [vangheem]
 
 
 2.1.8 (2012-08-18)
